Fix thin separator z-indexing

--- a/src/css/Splits.scss
+++ b/src/css/Splits.scss
@@ -3,6 +3,7 @@
 .splits {
   display: table;
   width: 100%;
+  position: relative;
 
   span.split.split-separator div {
     line-height: 18px;
@@ -15,6 +16,13 @@
 
     @include time;
 
+    .current-split-background {
+      position: absolute;
+      width: 100%;
+      height: 24px;
+      padding: 0;
+    }
+
     .split-icon-empty {
       height: 18px;
       padding: 0 9px;
@@ -24,6 +32,7 @@
       display: table-cell;
       text-align: right;
       padding: 1px 6px 0px 6px;
+      position: relative;
     }
 
     .split-icon-container {
